--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_container"
-        android:layout_above="@id/bottomNav"/>
+        android:layout_above="@id/bottomNav">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:elevation="8dp"
+            android:fontFamily="cursive"
+            android:letterSpacing="0.08"
+            android:rotationX="10"
+            android:text="Kenali Dan Cintai\nKucing Lebih Dekat"
+            android:textColor="#FF6B6B"
+            android:textSize="35dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="80dp"
+            android:elevation="8dp"
+            android:fontFamily="cursive"
+            android:letterSpacing="0.08"
+            android:rotationX="10"
+            android:text="Welcome"
+            android:textColor="#FF6B6B"
+            android:textSize="35dp" />
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
