--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="ungu_pastel_muda">#DEB2FB</color>
+    <color name="ungu_pastel_gelap">#CA82F8</color>
 </resources>
