--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,9 @@
             android:fontFamily="cursive"
             android:letterSpacing="0.08"
             android:rotationX="10"
-            android:text="Kenali Dan Cintai\nKucing Lebih Dekat"
+            android:text="@string/kenali_dan_cintai_nkucing_lebih_dekat"
             android:textColor="#FF6B6B"
-            android:textSize="35dp" />
+            android:textSize="35sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:fontFamily="cursive"
             android:letterSpacing="0.08"
             android:rotationX="10"
-            android:text="Welcome"
+            android:text="@string/welcome"
             android:textColor="#FF6B6B"
             android:textSize="35dp" />
     </FrameLayout>
