--- a/app/src/main/res/layout/fragment_jelajahi_kucing.xml
+++ b/app/src/main/res/layout/fragment_jelajahi_kucing.xml
@@ -4,19 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentJelajahiKucing"
+    tools:context=".JelajahiKucingFragment"
     android:background="@color/white">
-
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_margin="16dp"
-        android:padding="12dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="Back button"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitCenter" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="340dp"
