--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,37 +6,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".HomeFragment">
 
-    <TextView
-        android:id="@+id/tv_title"
+    <!-- Container untuk mengelompokkan TextView -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="8dp"
-        android:fontFamily="cursive"
-        android:letterSpacing="0.08"
-        android:rotationX="10"
-        android:text="@string/kenali_dan_cintai_nkucing_lebih_dekat"
-        android:textColor="#FF6B6B"
-        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:elevation="8dp"
-        android:fontFamily="cursive"
-        android:letterSpacing="0.08"
-        android:rotationX="10"
-        android:text="@string/welcome"
-        android:textColor="#FF6B6B"
-        android:textSize="35sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:letterSpacing="0.08"
+            android:rotationX="10"
+            android:text="@string/kenali_dan_cintai_nkucing_lebih_dekat"
+            android:textAlignment="center"
+            android:textColor="#FF6B6B"
+            android:textSize="35sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_welcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:elevation="8dp"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:letterSpacing="0.08"
+            android:rotationX="10"
+            android:text="@string/welcome"
+            android:textAlignment="center"
+            android:textColor="#FF6B6B"
+            android:textSize="35sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
