--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,48 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:context="">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="128dp"
+        android:layout_height="127dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="32dp"
         android:src="@drawable/logobaru_nobg" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Halaman Register"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="16dp" />
+
     <EditText
         android:id="@+id/et_username"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Username"
+        android:layout_height="50dp"
+        android:hint="  Username"
         android:inputType="text"
-        android:layout_marginTop="32dp" />
+        android:layout_marginTop="32dp"
+        android:background="@drawable/rounded_input"/>
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
+        android:layout_height="50dp"
+        android:hint="  Email"
         android:inputType="textEmailAddress"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_input"/>
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
+        android:layout_height="50dp"
+        android:hint="  Password"
         android:inputType="textPassword"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_input"/>
 
     <EditText
         android:id="@+id/et_confirm_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Confirm Password"
+        android:layout_height="50dp"
+        android:hint="  Confirm Password"
         android:inputType="textPassword"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_input"/>
 
     <Button
         android:id="@+id/btn_register"
@@ -58,6 +74,6 @@
         android:layout_height="wrap_content"
         android:text="Already have an account? Sing In"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
