add register, login,, with realtime database

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.AplikasiKatalogKucing" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/pinkBtn</item>
-    </style>
-
+    <!-- Other styles can be defined here -->
 </resources>
