--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,17 +28,19 @@
         android:id="@+id/et_username"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  Username"
+        android:hint="Username"
         android:inputType="text"
         android:layout_marginTop="32dp"
+        android:padding="10dp"
         android:background="@drawable/rounded_input"/>
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  Password"
+        android:hint="Password"
         android:inputType="textPassword"
+        android:padding="10dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_input"/>
 
