--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,8 +28,9 @@
         android:id="@+id/et_username"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  Username"
+        android:hint="Username"
         android:inputType="text"
+        android:padding="10dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_input"/>
 
@@ -37,7 +38,8 @@
         android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  Email"
+        android:hint="Email"
+        android:padding="10dp"
         android:inputType="textEmailAddress"
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_input"/>
@@ -46,16 +48,18 @@
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  Password"
-        android:inputType="textPassword"
         android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_input"/>
+        android:background="@drawable/rounded_input"
+        android:hint="Password"
+        android:padding="10dp"
+        android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/et_confirm_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  Confirm Password"
+        android:hint="Confirm Password"
+        android:padding="10dp"
         android:inputType="textPassword"
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_input"/>
