--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.AplikasiKatalogKucing" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<!--        <item name="colorPrimary">@color/my_dark_primary</item> &lt;!&ndash; Uncomment and customize as needed &ndash;&gt;-->
     </style>
+
+    <style name="Theme.AplikasiKatalogKucing" parent="Base.Theme.AplikasiKatalogKucing" />
 </resources>
