--- a/app/src/main/res/layout/activity_list_pet_care.xml
+++ b/app/src/main/res/layout/activity_list_pet_care.xml
@@ -84,7 +84,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"
-        android:clipToPadding="false"/>
+        android:clipToPadding="false"
+        android:padding="8dp" />
 
 </LinearLayout>
